<resources>
    <string name="app_name">DeepMusic</string>
    <string name="your_library">Search</string>
    <string name="player">Player</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="home">Home</string>
    <string name="top_genres">Top genres</string>
    <string name="top_artists">Top artists</string>

    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>

    <string name="add">Add</string>
    <string name="update">Update</string>

    <string name="done">Refresh</string>
</resources>