<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/your_library"
        android:name="com.ceri.deepmusic.ui.yourLibrary.YourLibraryFragment"
        android:label="@string/your_library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_your_library_to_player"
            app:destination="@id/player" />
    </fragment>

    <fragment
        android:id="@+id/player"
        android:name="com.ceri.deepmusic.ui.player.PlayerFragment"
        android:label="@string/player"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/bookmarks"
        android:name="com.ceri.deepmusic.ui.bookmarks.BookmarksFragment"
        android:label="@string/bookmarks"
        tools:layout="@layout/fragment_bookmarks" >
        <action
            android:id="@+id/action_bookmarks_to_player"
            app:destination="@id/player" />
    </fragment>
    <fragment
        android:id="@+id/home"
        android:name="com.ceri.deepmusic.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_player"
            app:destination="@id/player" />
    </fragment>
</navigation>